tests/NormalTests/paczka1/small_fuzzy/33202131.err
Error in line 3: TyE9fcu A311 5,77
Error in line 5: ZlMSk89Qgzh A311 10,1
